@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-05-09T01:05:17Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
+  "timestamp" : "2022-05-10T01:00:31Z",
+  "count" : 5,
+  "count_minmax" : [ 0, 5 ],
   "count_prev_day_inc" : 1,
   "count_prev_day_dec" : 0,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
+  "uniques" : 4,
+  "uniques_minmax" : [ 0, 4 ],
   "uniques_prev_day_inc" : 1,
   "uniques_prev_day_dec" : 0
 }
