@@ -1,12 +1,7 @@
 {
-  "count": 66,
-  "uniques": 17,
+  "count": 70,
+  "uniques": 18,
   "clones": [
-    {
-      "timestamp": "2022-04-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-01T00:00:00Z",
       "count": 11,
@@ -36,6 +31,11 @@
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 23,
       "uniques": 11
+    },
+    {
+      "timestamp": "2022-05-09T00:00:00Z",
+      "count": 5,
+      "uniques": 4
     }
   ]
 }
